# pytest_aws_config

./: .gitignore  Dockerfile  README.md  pytest_aws_config.py  run_tests.sh  setup.cfg
test_config/: README.txt  config
tests/: run_in_docker.sh  test_config_available.py  test_config_unavailable.py  test_credentials_available.py  test_credentials_unavailable.py
