[metadata]
name = pytest_aws_config
version = 0.1.0
author = Martin Altmayer
author_email = martin.altmayer@web.de
description = Protect your AWS credentials in unit tests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MartinAltmayer/pytest_aws_config
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing

[options]
packages = pytest_aws_config
python_requires = >=3.6
